--- a/ja/404.html
+++ b/ja/404.html
@@ -19,8 +19,8 @@
     }
   });
 </script>
-<link rel="stylesheet" href="https://urushiyama.github.io/ja//css/style.css">
-<link rel="shortcut icon" href="https://urushiyama.github.io/ja//avatar.ico">
+<link rel="stylesheet" href="https://urushiyama.github.io//css/style.css">
+<link rel="shortcut icon" href="https://urushiyama.github.io//avatar.ico">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/tomorrow.min.css">
@@ -34,7 +34,7 @@
       <h2 class="subtitle is-4">
         Page not found
       </h2>
-      <a class="button" href="https://urushiyama.github.io/ja/">Home Page</a>
+      <a class="button" href="https://urushiyama.github.io/">Home Page</a>
     </div>
   </div>
 </section>
