--- a/en/index.html
+++ b/en/index.html
@@ -147,3 +147,12 @@ School of Informatics, University of Tsukuba.</p>
 <script>hljs.initHighlightingOnLoad();</script>
 
 
+<script>
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+ga('create', 'UA-118350112-1', 'auto');
+ga('send', 'pageview');
+</script>
+<script async src='//www.google-analytics.com/analytics.js'></script>
+
+
+
