--- a/en/index.html
+++ b/en/index.html
@@ -37,6 +37,12 @@
       <div class="nav-right">
         <nav class="nav-item level is-mobile">
           
+          <a class="level-item" href="https://github.com/urushiyama" target="_blank">
+            <span class="icon">
+              <i class="fa fa-github"></i>
+            </span>
+          </a>
+          
         </nav>
       </div>
     </nav>
