--- a/en/index.html
+++ b/en/index.html
@@ -143,7 +143,7 @@ School of Informatics, University of Tsukuba.</p>
 
 <section class="section">
   <div class="container has-text-centered">
-    <p>&copy; 2018- urushiyama</p>
+    <p>&copy; 2018- urushiyama | Powered by <a href="https://gohugo.io">Hugo</a> with <a href="https://themes.gohugo.io/hucore/">HUCORE</a> theme.</p>
   </div>
 </section>
 
