--- a/ja/index.html
+++ b/ja/index.html
@@ -142,7 +142,7 @@
 
 <section class="section">
   <div class="container has-text-centered">
-    <p>&copy; 2018- urushiyama</p>
+    <p>&copy; 2018- urushiyama | Powered by <a href="https://gohugo.io">Hugo</a> with <a href="https://themes.gohugo.io/hucore/">HUCORE</a> theme.</p>
   </div>
 </section>
 
